<resources>
    <string name="app_name">TFT Elock</string>
    <string name="main_bar_text">Bluetooth Device</string>
    <string name="ble_not_support">Does not support Bluetooth</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="please_input_search_name">Please input some text</string>
    <string name="ble_name">Device name</string>
    <string name="ble_id">ID</string>
    <string name="date">Date</string>
    <string name="date_desc">Date:</string>
    <string name="rssi">RSSI</string>
    <string name="loading">Loading</string>
    <string name="configDesc">Config</string>
    <string name="config">Config</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="warning">Warning</string>
    <string name="connect_fail">Connect fail!</string>
    <string name="connecting">Connecting</string>
    <string name="disconnect_from_device">Disconnect from the device.</string>
    <string name="send">Send</string>
    <string name="disconnect_please_connect_manually">Has been disconnected, please reconnect manually!</string>
    <string name="edit">Edit</string>
    <string name="model">Model</string>
    <string name="software">Software</string>
    <string name="hardware">Hardware</string>
    <string name="all">All</string>
    <string name="error">Error</string>
    <string name="fail">Fail</string>
    <string name="readBG9xStatus">Waiting device Ready</string>
    <string name="seconds">Seconds</string>
    <string name="mv">mv</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="activeNetworkCmdSend">The activation network command has been sent successfully!</string>
    <string name="lock_status_00">Lock, lock status.</string>
    <string name="lock_status_01">Rope cut.</string>
    <string name="lock_status_03">Lock error, unlock status.</string>
    <string name="lock_status_04">NFC wakes up device to connect network.</string>
    <string name="lock_status_05">Unlock error, lock status.</string>
    <string name="lock_status_06">Unlock error cleared,unlock status.</string>
    <string name="lock_status_07">Lock error cleared,lock status.</string>
    <string name="lock_status_08">Lock error cleared,unlock status.</string>
    <string name="lock_status_11">NFC unlock successfully, unlock status.</string>
    <string name="lock_status_12">NFC unlock successful and plug out rope time out, lock status.</string>
    <string name="lock_status_13">NFC unlock failed, out of built-in Geofence,lock status.</string>
    <string name="lock_status_14">NFC unlock error, lock status.</string>
    <string name="lock_status_15">NFC unlock successfully, wait for time out, unlock status.</string>
    <string name="lock_status_16">Rope cut, NFC unlock error, rope cut and NFC unlock error.</string>
    <string name="lock_status_21">Network unlock successfully, unlock status.</string>
    <string name="lock_status_22">Network unlock successful and plug out rope time out, lock status.</string>
    <string name="lock_status_23">Network unlock failed, out of built-in Geofence,lock status.</string>
    <string name="lock_status_24">Network unlock error, lock status.</string>
    <string name="lock_status_25">Network unlock successfully, wait for time out, unlock status.</string>
    <string name="lock_status_26">Rope cut, network unlock error, rope cut and network unlock error.</string>
    <string name="lock_status_31">BLE unlock successfully, unlock status.</string>
    <string name="lock_status_32">BLE unlock successful and plug out rope time out, lock status.</string>
    <string name="lock_status_33">BLE unlock failed, out of built-in Geofence,lock status.</string>
    <string name="lock_status_34">BLE unlock error, lock status.</string>
    <string name="lock_status_35">BLE unlock successfully, wait for time out, unlock status.</string>
    <string name="lock_status_36">Rope cut, BLE unlock error, rope cut and BLE unlock error.</string>
    <string name="lock_status_41">SMS unlock successfully, unlock status.</string>
    <string name="lock_status_42">SMS unlock successful and plug out rope time out, lock status.</string>
    <string name="lock_status_43">SMS unlock failed, out of built-in Geofence,lock status.</string>
    <string name="lock_status_44">SMS unlock error, lock status.</string>
    <string name="lock_status_45">SMS unlock successfully, wait for time out, unlock status.</string>
    <string name="lock_status_46">Rope cut, SMS unlock error, rope cut and SMS unlock error.</string>
    <string name="lock_status_51">USB unlock successfully, unlock status.</string>
    <string name="lock_status_52">USB unlock successful and plug out rope time out, lock status.</string>
    <string name="lock_status_53">USB unlock failed, out of built-in Geofence,lock status.</string>
    <string name="lock_status_54">USB unlock error, lock status.</string>
    <string name="lock_status_55">USB unlock successfully, wait for time out, unlock status.</string>
    <string name="lock_status_56">Rope cut, USB unlock error, rope cut and USB unlock error.</string>
    <string name="input_ble_open_lock_pwd">Enter Bluetooth unlock password</string>
    <string name="input_ble_pwd">Enter Bluetooth password</string>
    <string name="pwd_format_error">Password format error</string>
    <string name="active_network">Activation</string>
    <string name="waitingDeviceReady">Wait for the device to be ready</string>
    <string name="clear_log">Clear log</string>
    <string name="refresh_status">Refresh status</string>
    <string name="pwd_error">Unlock password incorrect!</string>
    <string name="unique_id">Unique ID:</string>
    <string name="lock_status_09">BLE wakes up device to connect network.</string>
    <string name="error_retry">Error,please try again.</string>
    <string name="func_not_open">The current function is not turned on.</string>
    <string name="table_head_battery">Battery</string>
    <string name="table_head_date">Date</string>
    <string name="table_head_alarm">Alarm</string>
    <string name="table_head_serial_no">Serial no</string>
    <string name="table_head_latitude">Latitude</string>
    <string name="table_head_longitude">Longitude</string>
    <string name="table_head_lock_status">Lock status</string>
    <string name="table_head_device_status">Device status</string>
    <string name="table_head_speed">Speed(km/h)</string>
    <string name="table_head_mileage">Mileage(meter)</string>
    <string name="table_head_satellite">Satellite</string>
    <string name="table_head_network_signal">Network signal</string>
    <string name="send_pdf">Send pdf</string>
    <string name="send_excel">Send excel</string>
    <string name="send_csv">Send csv</string>
    <string name="choose_date">Choose date</string>
    <string name="str_yesterday">Yesterday</string>
    <string name="str_today">Today</string>
    <string name="str_last_3_day">Last 3 days</string>
    <string name="str_last_7_day">Last 7 days</string>
    <string name="str_last_week">Last week</string>
    <string name="str_this_month">This month</string>
    <string name="str_pre_month">Previous month</string>
    <string name="str_custom">Custom</string>
    <string name="str_alert_start_date_must_less_than_end_date">the start date must less than the end date!</string>
    <string name="wrong_date_warning">Wrong date format!</string>
    <string name="end_date">End date</string>
    <string name="start_date">Start date</string>
    <string name="reading_data">Reading data</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="read_data">Read data</string>
    <string name="read">Read</string>
    <string name="alarm_1">Device removed alarm</string>
    <string name="alarm_2">Rear cover open alarm</string>
    <string name="alarm_3">SOS alarm</string>
    <string name="alarm_4">Front light detected</string>
    <string name="alarm_5">Start falling alarm</string>
    <string name="alarm_6">Low battery alarm</string>
    <string name="alarm_7">Battery recovered alarm</string>
    <string name="alarm_8">Device high temperature alarm</string>
    <string name="alarm_9">Vibration start alarm</string>
    <string name="alarm_10">Collision alarm</string>
    <string name="alarm_11">Tilt start alarm</string>
    <string name="alarm_12">USB cable connected alarm</string>
    <string name="alarm_13">USB cable disconnected alarm</string>
    <string name="alarm_14">Enter geofence alarm</string>
    <string name="alarm_15">Leave geofence alarm</string>
    <string name="alarm_16">Start moving alarm</string>
    <string name="alarm_17">Stop moving alarm </string>
    <string name="alarm_18">Idle start alarm</string>
    <string name="alarm_19">Idle stop alarm </string>
    <string name="alarm_20">Power on</string>
    <string name="alarm_21">Device mounted alarm</string>
    <string name="alarm_22">Rear cover close alarm</string>
    <string name="alarm_23">Front light disappear alarm </string>
    <string name="alarm_24">Stop falling</string>
    <string name="alarm_25">Device high temperature disappear</string>
    <string name="alarm_26">Vibration stop alarm</string>
    <string name="alarm_27">Collision stopped alarm</string>
    <string name="alarm_28">Tilt recovered alarm</string>
    <string name="alarm_29">Power off </string>
    <string name="alarm_30">Device low temperature alarm</string>
    <string name="alarm_31">Device low temperature disappear</string>
    <string name="alarm_32">Short time stop </string>
    <string name="alarm_66">Jammer entering alarm</string>
    <string name="alarm_67">Jammer exiting alarm</string>
    <string name="alarm_70">Over speed alarm</string>
    <string name="alarm_71">Over speed alarm disappear</string>
    <string name="alarm_72">Drag alarm</string>
    <string name="alarm_74">Google alarm</string>
    <string name="alarm_77">Drag stopped alarm</string>
    <string name="open_save_record_warning">The current function is not turned on.try to Turn on?</string>
    <string name="func_open_error">The function is turned on fail.</string>
    <string name="cancel_light_warning">Attempt to cancel the light alarm?</string>
    <string name="receive_count">Receive count:</string>
    <string name="read_data_timeout">Reading data timeout, please try again</string>
    <string name="jump_to">Jump To</string>
    <string name="fix_input">Please fix your input!</string>
    <string name="page_out_of_range">Page number is out of range, please re-enter</string>
    <string name="no_select_date_warning">No date selected, no data will be read</string>
    <string name="please_repair_data_first">Please prepare the data first</string>
    <string name="date_time_range_out_of_3_day">The time range of the data cannot exceed 3 days</string>
    <string name="input_device_password">Enter password</string>
    <string name="input_error">Input error!</string>
    <string name="battery">Battery:</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="enable_alarm_charging">Enable Charging Alarm</string>
    <string name="enable_alarm_over_voltage">Enable Over Voltage Alarm</string>
    <string name="enable_alarm_low_battery">Enable Low Battery Alarm</string>
    <string name="enable_alarm_high_temperature">Enable High Temperature Alarm</string>
    <string name="enable_alarm_low_temperature">Enable Low Temperature Alarm</string>
    <string name="enable_alarm_lock_open">Enable Lock Open Alarm</string>
    <string name="enable_alarm_back_cover_open">Enable Back Cover Open Alarm</string>
    <string name="enable_alarm_gps_location">Enable GPS Location Alarm</string>
    <string name="enable_alarm_gps_interference">Enable GPS Interference Alarm</string>
    <string name="enable_alarm_lock_event">Enable Lock Event Alarm</string>
</resources>