<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_item_high"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_color_white"
            android:text="@string/high"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="@dimen/list_item_margin_left"
            android:layout_weight="3"
            android:textColor="@color/tx_black"
            android:textSize="@dimen/btn_size" />

        <EditText
            android:id="@+id/et_temp_high"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_bg"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:layout_weight="2"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/tx_black"
            android:inputType="numberSigned|numberDecimal"
            android:textSize="@dimen/btn_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_item_high"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_color_white"
            android:text="@string/low"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="@dimen/list_item_margin_left"
            android:layout_weight="3"
            android:textColor="@color/tx_black"
            android:textSize="@dimen/btn_size" />

        <EditText
            android:id="@+id/et_temp_low"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_bg"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:layout_weight="2"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/tx_black"
            android:inputType="numberSigned|numberDecimal"
            android:textSize="@dimen/btn_size" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_item_high"
        android:orientation="horizontal"
        android:gravity="center">

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/btn_submit"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:textAllCaps="false"
            android:text="@string/confirm"
            android:layout_margin="12dp" />
    </LinearLayout>
</LinearLayout>